--- a/index.html
+++ b/index.html
@@ -55,26 +55,29 @@
 
                 <div class="carousel-inner opacity-75">
                     <div class="carousel-item active ">
-                        <img src="images/cover/cover-1.png" class="d-block w-100 h-50" alt="...">
-                        <div class="carousel-caption d-none d-md-block h-50">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-md-block h-50">
+                            <h1>Get Started Digital <br> Learning</h1>
+                            <p>Start, switch, or advance your career with more than 5,000 courses, Professional
+                                Certificates, and degrees from world-class universities and companies..</p>
                             <button class="btn btn-primary btn-lg" type="submit">Get Start</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block h-50">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-caption  d-md-block h-50 ">
+                            <h5>Get Started Digital <br> Learning</h5>
+                            <p>Start, switch, or advance your career with more than 5,000 courses, Professional
+                                Certificates, and degrees from world-class universities and companies.</p>
                             <button class="btn btn-primary btn-lg" type="submit">Get Start</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100 " alt="...">
-                        <div class="carousel-caption d-none d-md-block h-50">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-caption  d-md-block h-50">
+                            <h5>Get Started Digital <br> Learning</h5>
+                            <p>Start, switch, or advance your career with more than 5,000 courses, Professional
+                                Certificates, and degrees from world-class universities and companies.</p>
                             <button class="btn btn-primary btn-lg" type="submit">Get Start</button>
                         </div>
                     </div>
@@ -91,158 +94,100 @@
                 </button>
             </div>
         </section>
+
         <!-- Slider Section End -->
         <!-- course section start-->
         <section class="pb-5">
             <div>
                 <div class="text-center">
-                    <h2 class="fw-bold">Discover Our Popular
+                    <h1 class="fw-bold">Our Popular
                         <br>
                         Courses
-                    </h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable <br>
-                        content of a page
-                        when looking at its layout</p>
+                    </h1>
+                    <p>Break into a new field like information technology or data science. No prior <br> experience
+                        necessary to get started.</p>
                 </div>
                 <div class="text-center">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex ">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-1.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-1.png" alt="">
                                 </div>
-                                <div>
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                <div class="p-5 text-start">
+                                    <h5>Learn CSS</h5>
+                                    <p>Build Responsive Real-World Websites with HTML and CSS.</p>
+                                    <h6 class="text-primary fw-bold">Price : 30$</h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-2.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-2.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                    <h5>Learn in Bootstrap</h5>
+                                    <p>Learn how to use one of the most popular front-end frameworks, Bootstrap 4.</p>
+                                    <h6 class="text-primary fw-bold">Price : 40$</h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-3.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-3.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                    <h5>Learn Tailwind</h5>
+                                    <p>Learn to build modern websites with TailwindCSS 3.0 step by step and with
+                                        examples.</p>
+                                    <h6 class="text-primary fw-bold">Price : 65$</h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-4.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-4.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                    <h5>Kotlin for Java developers</h5>
+                                    <p> learn
+                                        Kotlin language conventions along the way.</p>
+                                    <h6 class="text-primary fw-bold">Price : 100$</h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="ccol-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-5.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-5.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                    <h5>Learn Python 3</h5>
+                                    <p>Discover career-worthy Python programming concepts and language.</p>
+                                    <h6 class="text-primary fw-bold">Price : 75$</h6>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 col-sm-12">
-                            <div class="border bg-light rounded d-flex">
+                        <div class="col-lg-6 col-md-12 g-3">
+                            <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img src="images/course/course-6.png" alt="">
+                                    <img class="img-fluid" src="images/course/course-6.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
-                                    <h5>Custom column padding</h5>
-                                    <p>This padding uses for two element specing</p>
-                                    <h6 class="text-primary fw-bold">Price : 20$</h6>
+                                    <h5>Data Scientist</h5>
+                                    <p>Become a hirable data-driven decision maker with this helpful Career Path.
+
+                                    </p>
+                                    <h6 class="text-primary fw-bold">Price : 120$</h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- <div class=" row gap-0">
-                    <div class="card col-6 ms-0">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="images/course/course-1.png" class=" rounded-start" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card  col-6">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="images/course/course-2.png" class=" rounded-start" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card  col-6">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="images/course/course-3.png" class=" rounded-start" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card  col-6">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="images/course/course-4.png" class=" rounded-start" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-            </div>
+
         </section>
         <!-- Course Section End -->
         <!-- Frequently Asked Questions Section Start -->
