--- a/index.html
+++ b/index.html
@@ -194,9 +194,8 @@
         <section class="mt-5 pb-5">
             <div class="text-center">
                 <h1>Frequently Asked Questions</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo excepturi quam
-                    <br> autem velit
-                    nam vitae quia eligendi perferendis!
+                <p>In no small part, the importance of FAQ pages has been driven in recent years by the growth in voice
+                    search, mobile search, <br> and personal/home assistants and speakers.
                 </p>
             </div>
 
@@ -207,20 +206,18 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accordion Item #1
+                                    Difference between flexbox and css grid
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until
-                                    the collapse plugin adds the appropriate classes that we use to style each element.
-                                    These classes control the overall appearance, as well as the showing and hiding via
-                                    CSS
-                                    transitions. You can modify any of this with custom CSS or overriding our default
-                                    variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong> Flexbox works better in one dimension only (either rows OR
+                                        columns).</strong> The basic difference between CSS Grid Layout and CSS Flexbox
+                                    Layout is that flexbox was designed for layout in one dimension - either a row or a
+                                    column. Grid was designed for two-dimensional layout - rows
+                                    <code>.accordion-body</code>, and columns at the same
+                                    time.
                                 </div>
                             </div>
                         </div>
@@ -228,19 +225,17 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Accordion Item #2
+                                    Difference between bootstrap and tailwind.
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding
-                                    via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                    default variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>Tailwind is different from frameworks like Bootstrap, Foundation, or Bulma
+                                        in that it's not a UI kit.</strong> Tailwind CSS uses a set of utility classes
+                                    to create a neat UI with more flexibility and uniqueness.Sites created using
+                                    Bootstrap follow the generic <code>.accordion-body</code> pattern that makes them
+                                    look identical.
                                 </div>
                             </div>
                         </div>
@@ -248,20 +243,32 @@
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Accordion Item #3
+                                    What is the CSS Box Model?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until
-                                    the collapse plugin adds the appropriate classes that we use to style each element.
-                                    These classes control the overall appearance, as well as the showing and hiding via
-                                    CSS
-                                    transitions. You can modify any of this with custom CSS or overriding our default
-                                    variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                <div class="accordion-body">The CSS box model is essentially <strong> a box that wraps
+                                        around every HTML element.</strong> The CSS box model is essentially a box that
+                                    wraps around every HTML element. It consists of: margins, borders, padding
+                                    <code>.accordion-body</code>, and the actual content
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    What are semantic tags in HTML give some examples??
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">The HTML semantics refers to <strong> the tags that provide
+                                        meaning to an HTML page rather than just presentation.</strong> It makes HTML
+                                    more comprehensible by better defining the different <code>.accordion-body</code>
+                                    sections and layout of web
+                                    pages.
                                 </div>
                             </div>
                         </div>
