--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-1.png" alt="">
+                                    <img src="images/course/course-1.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Learn CSS</h5>
@@ -121,10 +121,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 g-3">
+                        <div class=" col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-2.png" alt="">
+                                    <img src="images/course/course-2.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Learn in Bootstrap</h5>
@@ -136,7 +136,7 @@
                         <div class="col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-3.png" alt="">
+                                    <img src="images/course/course-3.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Learn Tailwind</h5>
@@ -149,7 +149,7 @@
                         <div class="col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-4.png" alt="">
+                                    <img src="images/course/course-4.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Kotlin for Java developers</h5>
@@ -162,7 +162,7 @@
                         <div class="col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-5.png" alt="">
+                                    <img src="images/course/course-5.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Learn Python 3</h5>
@@ -174,7 +174,7 @@
                         <div class="col-lg-6 col-md-12 g-3">
                             <div class="border bg-light rounded d-sm-flex">
                                 <div>
-                                    <img class="img-fluid" src="images/course/course-6.png" alt="">
+                                    <img src="images/course/course-6.png" alt="">
                                 </div>
                                 <div class="p-5 text-start">
                                     <h5>Data Scientist</h5>
@@ -190,6 +190,89 @@
 
         </section>
         <!-- Course Section End -->
+        <!-- Registration section Start -->
+        <Section>
+            <div>
+                <div class="d-none d-sm-none d-md-none d-lg-block bg-primary d-lg-flex border  rounded p-5"
+                    style="height: 275px;">
+                    <div class="w-100 text-white">
+                        <h2>Redy to join?</h2>
+                        <p>If you want to enroll in our course, please register soon.</p>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center w-100">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn bg-white" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                            Register Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="staticBackdropLabel">Provide your details
+                                        </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        please Write your name
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Understood</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-lg-none d-xl-none d-xxl-none d-xxl-block bg-primary  border rounded p-5"
+                    style="height: 275px;">
+                    <div class="w-100 text-white text-center">
+                        <h2>Redy to join?</h2>
+                        <p>You want to brighten up your programming life. you want to enroll in our course, please
+                            register soon.</p>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center w-100">
+                        <div class="bg-white rounded">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-white" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Registration
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Provide You Details
+                                            </h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            please write your na
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </Section>
+        <!-- Registration section End -->
         <!-- Frequently Asked Questions Section Start -->
         <section class="mt-5 pb-5">
             <div class="text-center">
