--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <main class="container">
         <!-- Nav Section Start-->
         <header>
-            <nav class="navbar navbar-expand-md navbar-expand-lg bg-light">
-                <a class="navbar-brand align fw-bold" href="#">Pro Edu</a>
+            <nav class="navbar navbar-expand-md navbar-expand-lg">
+                <a class="navbar-brand align fw-bold" href="#">
+                    <h1>Pro Edu</h1>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -60,13 +62,13 @@
                             <h1>Get Started Digital <br> Learning</h1>
                             <p>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies..</p>
-                            <button class="btn btn-primary btn-lg" type="submit">Get Start</button>
+                            <button class="btn btn-lg btn-primary" type="submit">Get Start</button>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption  d-md-block h-50 ">
-                            <h5>Get Started Digital <br> Learning</h5>
+                            <h2>Get Started Digital <br> Learning</h2>
                             <p>Start, switch, or advance your career with more than 5,000 courses, Professional
                                 Certificates, and degrees from world-class universities and companies.</p>
                             <button class="btn btn-primary btn-lg" type="submit">Get Start</button>
@@ -110,7 +112,7 @@
                 <div class="text-center">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-1.png" alt="">
                                 </div>
@@ -122,7 +124,7 @@
                             </div>
                         </div>
                         <div class=" col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-2.png" alt="">
                                 </div>
@@ -134,7 +136,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-3.png" alt="">
                                 </div>
@@ -147,7 +149,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-4.png" alt="">
                                 </div>
@@ -160,7 +162,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-5.png" alt="">
                                 </div>
@@ -172,7 +174,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 g-3">
-                            <div class="border bg-light rounded d-sm-flex">
+                            <div class="border rounded d-sm-flex">
                                 <div>
                                     <img src="images/course/course-6.png" alt="">
                                 </div>
@@ -189,6 +191,9 @@
                 </div>
 
         </section>
+        <div class="mb-5 d-flex justify-content-center">
+            <button class="btn btn-primary text-white">See More Courses</button>
+        </div>
         <!-- Course Section End -->
         <!-- Registration section Start -->
         <Section>
@@ -359,6 +364,24 @@
                 </div>
             </div>
         </section>
+        <!-- Frequently Asked Questions Section End -->
+        <!-- Trusted Section Start -->
+        <section class="mt-5 ">
+            <div class="d-none d-sm-none d-md-none d-lg-block">
+                <div class="text-center fw-blod p-2">
+                    <h1>Trusted by over 800+ companies</h1>
+                </div>
+                <div class=" d-flex justify-content-between">
+                    <img src="images/company/company-1.png" alt="">
+                    <img src="images/company/company-2.png" alt="">
+                    <img src="images/company/company-3.png" alt="">
+                    <img src="images/company/company-4.png" alt="">
+                    <img src="images/company/company-5.png" alt="">
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Trusted Section Start -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
